[package]
name = "feature-toggles-service"
version = "0.1.0"
authors = ["Viktor <viktor.kojouharov@globus.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
futures = "0.3.4"

# Flags
structopt = { version = "0.3.9", default-features = false }

# HTTP server
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.1"
serde = "1.0.104"
serde_json = "1.0.47"

# NATS client
rants = "0.4.2"

# Mongodb
mongodb = "0.9.1"
bson = "0.14.0"
